(search) Fix layout issues

--- a/src/app/features/search/components/search-bar/search-bar.component.scss
+++ b/src/app/features/search/components/search-bar/search-bar.component.scss
@@ -3,8 +3,6 @@
 
 :host {
   .search-bar-wrapper {
-    position: relative;
-
     .search-bar-input-container {
       padding: .75rem 6.75rem .75rem 1rem;
       display: flex;
@@ -137,6 +135,6 @@
     display: flex;
     gap: .5rem;
     flex-wrap: wrap;
-    padding: .75rem 1rem;
+    padding: .75rem .125rem;
   }
 }
